updated image directories

--- a/customers-table.html
+++ b/customers-table.html
@@ -6,7 +6,7 @@
       <p class="main-content__subtitle">Active Members</p>
     </div>
     <div class="search-bar">
-      <button class="search-bar__button"> <img class="search-bar__icon" src="../assets/img/search.svg" alt="search"/></button>
+      <button class="search-bar__button"> <img class="search-bar__icon" src="./assets/img/search.svg" alt="search"/></button>
       <input class="search-bar__input" type="text" placeholder="Search"/>
     </div>
   </div>
