--- a/sidebar.html
+++ b/sidebar.html
@@ -7,15 +7,15 @@
     <ul class="sidebar__menu">
       <li class="sidebar__menu-item fade-in"><a class="sidebar__link" href="#" onclick="selectMenu('Dashboard')">
           <div class="sidebar__link-content"><img class="sidebar__icon" src="..onclick="selectMenu('Product')">
-          <div class="sidebar__link-content"><img class="sidebar__icon" src="./assets/img/product.svg" alt="Product icon"/><span class="sidebar__text">Product</span></div><img class="sidebar__arrow" src="../assets/img/arrow.svg" alt="Arrow"/></a></li>
+          <div class="sidebar__link-content"><img class="sidebar__icon" src="./assets/img/product.svg" alt="Product icon"/><span class="sidebar__text">Product</span></div><img class="sidebar__arrow" src="./assets/img/arrow.svg" alt="Arrow"/></a></li>
       <li class="sidebar__menu-item fade-in"><a class="sidebar__link" href="#" onclick="selectMenu('Customers')">
-          <div class="sidebar__link-content"><img class="sidebar__icon" src="./assets/img/customers.svg" alt="Customers icon"/><span class="sidebar__text">Customers</span></div><img class="sidebar__arrow" src="../assets/img/arrow.svg" alt="Arrow"/></a></li>
+          <div class="sidebar__link-content"><img class="sidebar__icon" src="./assets/img/customers.svg" alt="Customers icon"/><span class="sidebar__text">Customers</span></div><img class="sidebar__arrow" src="./assets/img/arrow.svg" alt="Arrow"/></a></li>
       <li class="sidebar__menu-item fade-in"><a class="sidebar__link" href="#" onclick="selectMenu('Income')">
-          <div class="sidebar__link-content"><img class="sidebar__icon" src="./assets/img/income.svg" alt="Income icon"/><span class="sidebar__text">Income</span></div><img class="sidebar__arrow" src="../assets/img/arrow.svg" alt="Arrow"/></a></li>
+          <div class="sidebar__link-content"><img class="sidebar__icon" src="./assets/img/income.svg" alt="Income icon"/><span class="sidebar__text">Income</span></div><img class="sidebar__arrow" src="./assets/img/arrow.svg" alt="Arrow"/></a></li>
       <li class="sidebar__menu-item fade-in"><a class="sidebar__link" href="#" onclick="selectMenu('Promote')">
-          <div class="sidebar__link-content"><img class="sidebar__icon" src="./assets/img/promote.svg" alt="Promote icon"/><span class="sidebar__text">Promote</span></div><img class="sidebar__arrow" src="../assets/img/arrow.svg" alt="Arrow"/></a></li>
+          <div class="sidebar__link-content"><img class="sidebar__icon" src="./assets/img/promote.svg" alt="Promote icon"/><span class="sidebar__text">Promote</span></div><img class="sidebar__arrow" src="./assets/img/arrow.svg" alt="Arrow"/></a></li>
       <li class="sidebar__menu-item fade-in"><a class="sidebar__link" href="#" onclick="selectMenu('Help')">
-          <div class="sidebar__link-content"><img class="sidebar__icon" src="./assets/img/help.svg" alt="Help icon"/><span class="sidebar__text">Help</span></div><img class="sidebar__arrow" src="../assets/img/arrow.svg" alt="Arrow"/></a></li>
+          <div class="sidebar__link-content"><img class="sidebar__icon" src="./assets/img/help.svg" alt="Help icon"/><span class="sidebar__text">Help</span></div><img class="sidebar__arrow" src="./assets/img/arrow.svg" alt="Arrow"/></a></li>
     </ul>
   </nav>
   <div class="user-profile"><img class="user-profile__avatar" src="./assets/img/avatar.png" alt="Evano"/>
